# mlir-hello

./: CMakeLists.txt  addmultest.py  addtest.py  addtestforint.py  build_and_run.sh  print.ll  test_tanh.py  testtranspose.py  tosaadd.py  update-llvm.sh
hello-opt/: hello-opt.cpp
include/Hello/: AST.h  HelloDialect.h  HelloOps.h  HelloOps.td  HelloPasses.h  Lexer.h  Parser.h
include/Mx/: CMakeLists.txt  MxDialect.h  MxDialect.td  MxOps.h  MxOps.td  MxPasses.h  MxType.td  MxUtils.h  TosaLegalizeUtils.h
lib/: CMakeLists.txt
lib/Hello/: CMakeLists.txt  HelloDialect.cpp  LowerToAffine.cpp  LowerToLLVM.cpp  LowerToTosa.cpp
lib/Mx/: CMakeLists.txt  LowerToTosa.cpp  MxDialect.cpp  MxOps.cpp  MxUtils.cpp  TosaLegalizeUtils.cpp
mx-opt/: CMakeLists.txt  mx-opt.cpp
parser/: AST.cpp
python/: CMakeLists.txt
python/hello_mlir/: HelloBinding.td  __init__.py
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/Hello/: ad.mlir  addmultest.mlir  addtest.mlir  addtest.py  multest.mlir  multest.py  single-loop.mlir
test/IR_Dump/: add.txt  addmul.txt  addmultest.txt  addtest.txt  conv2d.txt  conv2dtest.txt  forward.txt  forwardtest.txt  linear.txt  lineartest.txt  maxpool2d.txt  maxpool2dtest.txt  multest.txt  reshapetest.txt  reshapetest2.txt  tanh.txt  tanhtest.txt  transpose.txt
test/Mx/: addmultest.mlir  addmultest.py  addtest.mlir  addtest.py  conv2dtest.mlir  conv2dtest.py  forwardtest.mlir  lineartest.mlir  maxpool2dtest.mlir  maxpool2dtest.py  multest.mlir  multest.py  reshapetest.mlir  reshapetest2.mlir  tanhtest.mlir  tanhtest.py  transposetest.mlir  transposetest2.mlir
test/pyfolder/: test_add.py  test_addmul.py  test_conv.py  test_forward.py  test_linear.py  test_maxpool.py  test_mul.py  test_reshape.py  test_reshape2.py  test_tanh.py  test_transpose.py
